Update SessionReflections.md